# SynthOpt

./: README.md  new_test.py  pyproject.toml  requirements.txt  setup.py  test.py  testing.ipynb
evaluate/: privacy.py  quality.py  report.py  utility.py  visualisation.py
examples/: ADNI_cleaned.csv  ADNI_cleaned_no_id.csv  ADNI_cleaned_subset1.csv  ADNI_cleaned_subset2.csv  ADNI_cleaned_subset3.csv  NEW_TESTING_DATASET.csv  alzheimers_disease_data_subset1.csv  alzheimers_disease_data_subset2.csv  alzheimers_disease_data_subset2_V2.csv  alzheimers_disease_data_subset3.csv  bio.csv  dementia_example_data.csv  dispat.csv  example_metadata.csv  example_synthetic_data.csv  indis.csv  inf.csv  new_healthcare_testing_dataset.csv  new_new_testing_dataset.csv  oasis_dataset.csv  rel11.csv  rel12.csv  rel13.csv  test_set.csv  test_set_1.csv  test_set_2.csv  testing_dataset.csv  testing_dataset2.csv
generate/: metadata.py  syntheticdata.py
optimise/: optimise.py
output/: HEALTHCARE_STATS_METADATA.csv  HEALTHCARE_SYNTHETIC_CORR.csv  HEALTHCARE_SYNTHETIC_STATS.csv  NEW_HEALTHCARE_TESTING_CORR_MATRIX.csv  NEW_TESTING_CORR_METADATA.csv  NEW_TESTING_DATASET_STATS_METADATA.csv  NEW_TESTING_DATASET_SYNTHETIC_CORR.csv  NEW_TESTING_DATASET_SYNTHETIC_STATS.csv  NEW_TESTING_DATASET_SYNTHETIC_STRUCTURAL.csv  NEW_TESTING_STATS_METADATA.csv  additional_export_synthetic.csv  alzheimers_disease_data_subset1_synthetic.csv  alzheimers_disease_data_subset2_synthetic.csv  bio_synthetic_data.csv  correlated_metadata_synthetic_data.csv  dispat_synthetic_data.csv  epaq_export_synthetic.csv  (+19 more)
(+55 files in other folders)
