[build-system]
requires = ["setuptools>=42", "wheel", "setuptools_scm[toml]>=6.0.1"]
build-backend = "setuptools.build_meta"

[project]
name = "SynthOpt"
version = "0.1.0"
description = "A package for synthetic data generation, evaluation and optimisation."
readme = "README.md"
readme-content-type = "text/markdown"
authors = [
    { name = "Lewis Hotchkiss", email = "lewishotchkiss123@gmail.com" }
]
license = { name = "Apache-2.0" }
keywords = ["synthetic data", "optimization", "data science", "AI"]

[project.urls]
Homepage = "https://github.com/LewisHotchkissDPUK/SynthOpt"
Source = "https://github.com/LewisHotchkissDPUK/SynthOpt"

[project.dependencies]
sdmetrics = "*"
sdv = "*"
synthcity = "*"
anonymeter = "*"
seaborn = "*"

[project.classifiers]
"Development Status :: 3 - Alpha"
"Environment :: Console"
"Environment :: Web Environment"
"Intended Audience :: Developers"
"Intended Audience :: Science/Research"
"License :: OSI Approved :: Apache Software License"
"Programming Language :: Python :: 3.8"
"Programming Language :: Python :: 3.9"
"Programming Language :: Python :: 3.10"
"Topic :: Software Development :: Libraries"
"Topic :: Scientific/Engineering :: Artificial Intelligence"
"Topic :: Scientific/Engineering :: Data Science"
